--- a/admin/docker/Dockerfile.build
+++ b/admin/docker/Dockerfile.build
@@ -25,10 +25,10 @@ RUN apt update && \
         libgmp-dev \
         libgmp10 \
         libgmpxx4ldbl \
-        python \
-        python-pytest \
-        python-setuptools \
-        python-yaml
+        python3 \
+        python3-pytest \
+        python3-setuptools \
+        python3-yaml
 
 RUN mkdir -p /usr/local/problemtools_build
 
