--- a/admin/docker/Dockerfile.minimal
+++ b/admin/docker/Dockerfile.minimal
@@ -20,10 +20,9 @@ RUN apt update && \
     apt install -y \
         ghostscript \
         libgmpxx4ldbl \
-        python-minimal \
-        python-pkg-resources \
-        python-plastex \
-        python-yaml \
+        python3-minimal \
+        python3-pkg-resources \
+        python3-yaml \
         texlive-fonts-recommended \
         texlive-generic-recommended \
         texlive-lang-cyrillic \
